--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
                         <img class="w-24 transform hover:scale-110 transition duration-200" src="images/social_x.png"
                             alt="">
                     </a>
-                  <a href="https://twitter.com/Vladtokens">
+                  <a href="https://t.me/VladToken">
                         <img class="w-24 transform hover:scale-110 transition duration-200" src="images/social_tg.png"
                             alt="">
                 
