--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
                         <img class="w-24 transform hover:scale-110 transition duration-200" src="images/instagram.png"
                             alt="">
                     </a>
-                    <a href="https://twitter.com/Vladtokens">
+                    <a href="https://twitter.com/VladTokens">
                         <img class="w-24 transform hover:scale-110 transition duration-200" src="images/social_x.png"
                             alt="">
                     </a>
