--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <span class="text-center text-3xl lg:text-6xl text-cyan-400 glow-text" style="background-image: linear-gradient(to right, cyan, violet);
                     color: transparent;
                     -webkit-background-clip: text;
-                    background-clip: text;">VLAD TOKEN</span>
+                    background-clip: text;">VLAD TOKEN Testnet</span>
                 </h1>
                   <style>
         body {
