--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                     -webkit-background-clip: text;
                     background-clip: text;">Partners</h1>
 
-                <img class="w-32 md:w-42 lg:w-64 px-5" src="images/capture.png" alt="">
+                <img class="w-32 md:w-42 lg:w-64 px-5" src="" alt="">
             </div>
 
             <div
@@ -504,7 +504,7 @@
                         <div
                             class="flex flex-col justify-center items-center border-4 rounded-lg m-4 lg:m-10 p-10 transform hover:scale-110 transition duration-200">
                             <div class="flex justify-center items-center">
-                                <img class="w-32 lg:w-64 " src="images/partners/capture.png" alt="">
+                                <img class="w-32 lg:w-64 " src="images/capture.png" alt="">
                             </div>
                             <div class="flex justify-center items-center">
                                 <p  class="text-center text-4xl lg:text-7xl text-cyan-400 glow-text" style="background-image: linear-gradient(to right, cyan, violet);
