--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
             <div
                 class="flex flex-col lg:flex-row justify-center items-center align-middle mb-5 md:mb-10 lg:mb-20 mt-5 lg:mt-20 ">
 
-                <a href="https://www.pinksale.finance/">
+                <a href="https://testnet.bscscan.com/token/0xbe8df341f79920ea989553394b8f47812a32d11a/">
                     <div class="token1 w-64 h-64 flex items-center lg:w-1/3 mx-4 md:mx-6 lg:mx-8 mb-8">
                         <div
                             class="flex flex-col justify-center items-center border-4 rounded-lg m-4 lg:m-10 p-10 transform hover:scale-110 transition duration-200">
@@ -493,7 +493,7 @@
                                 <p class="text-center text-4xl lg:text-7xl text-cyan-400 glow-text" style="background-image: linear-gradient(to right, cyan, violet);
                     color: transparent;
                     -webkit-background-clip: text;
-                    background-clip: text;">PinkSale</p>
+                    background-clip: text;">TESTNET</p>
                             </div>
                         </div>
                     </div>
@@ -510,7 +510,7 @@
                                 <p  class="text-center text-4xl lg:text-7xl text-cyan-400 glow-text" style="background-image: linear-gradient(to right, cyan, violet);
                     color: transparent;
                     -webkit-background-clip: text;
-                    background-clip: text;">DEXView</p>
+                    background-clip: text;">Pancake</p>
                             </div>
                         </div>
                     </div>
