--- a/index.html
+++ b/index.html
@@ -487,18 +487,18 @@
                         <div
                             class="flex flex-col justify-center items-center border-4 rounded-lg m-4 lg:m-10 p-10 transform hover:scale-110 transition duration-200">
                             <div class="flex justify-center items-center">
-                                <img class="w-16 lg:w-32 " src="images/cpture.png" alt="">
+                                <img class="w-16 lg:w-32 " src="images/capture.png" alt="">
                             </div>
                             <div class="flex justify-center items-center">
                                 <p class="text-center text-4xl lg:text-7xl text-cyan-400 glow-text" style="background-image: linear-gradient(to right, cyan, violet);
                     color: transparent;
                     -webkit-background-clip: text;
-                    background-clip: text;">TESTNET</p>
+                    background-clip: text;">Testnet</p>
                             </div>
                         </div>
                     </div>
                 </a>
-                <a href="https://www.dexview.com/">
+                <a href="https://pancakeswap.finance//">
                     <div
                         class="token1 w-64 h-64 flex items-center lg:w-1/3 mx-4 md:mx-6 lg:mx-8 mb-8 transform hover:scale-110 transition duration-200">
                         <div
@@ -510,7 +510,7 @@
                                 <p  class="text-center text-4xl lg:text-7xl text-cyan-400 glow-text" style="background-image: linear-gradient(to right, cyan, violet);
                     color: transparent;
                     -webkit-background-clip: text;
-                    background-clip: text;">Pancake</p>
+                    background-clip: text;">Very Soon</p>
                             </div>
                         </div>
                     </div>
