--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                                 <p  class="text-center text-4xl lg:text-7xl text-cyan-400 glow-text" style="background-image: linear-gradient(to right, cyan, violet);
                     color: transparent;
                     -webkit-background-clip: text;
-                    background-clip: text;">Very Soon</p>
+                    background-clip: text;">Soon</p>
                             </div>
                         </div>
                     </div>
