--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="https://pancakeswap.finance//">
+                <a href="https://pancakeswap.finance/">
                     <div
                         class="token1 w-64 h-64 flex items-center lg:w-1/3 mx-4 md:mx-6 lg:mx-8 mb-8 transform hover:scale-110 transition duration-200">
                         <div
