--- a/index.html
+++ b/index.html
@@ -538,14 +538,13 @@
                         <img class="w-19 transform hover:scale-110 transition duration-200" src="images/instagram.png"
                             alt="">
                     </a>
-                    <a href="https://twitter.com/VladTokens">
-                        <img class="w-19 transform hover:scale-110 transition duration-200" src="images/social_x.png"
-                            alt="">
-                    </a>
-                  <a href="https://t.me/VladToken">
+    <a href="https://t.me/VladToken">
                         <img class="w-19 transform hover:scale-110 transition duration-200" src="images/social_tg.png"
                             alt="">
-                
+                    </a>
+    <a href="https://twitter.com/VladTokens/">
+                        <img class="w-19 transform hover:scale-110 transition duration-200" src="images/social_x.png"
+                            alt="">
                     </a>
                     
                 </div>
