--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <div class="quantity-label"><b>QUANTITY (BNB)</b></div>
             <div class="quantity-value">0.0000</div>
             <input type="range" min="0" max="10000" step="0.01" value="0" class="quantity-slider">
-            <div class="status" id="status"><B>SOLD TOO LOW</div>
+            <div class="status" id="status"></div>
         </div>
  
     </main>
@@ -437,7 +437,8 @@
                         <div id="hs-clipboard-basic" class=" text-white border  rounded-lg w-full ">
                             <input id="hs-clipboard-input" type="text"
                                 class="py-3 px-4 block rounded-lg text-sm w-full md:w-full placeholder:text-white  bg-black"
-                                value="0x13E03eC7Cd30dFA68EFc3A968f5B038746E84Af1">
+                                value="0xbE8DF341f79920EA989553394b8f47812A32D11a
+">
                         </div>
                         <button type="button"
                             class="js-clipboard p-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border text-white shadow-sm disabled:opacity-50 disabled:pointer-events-none "
@@ -510,7 +511,7 @@
                                 <p  class="text-center text-4xl lg:text-7xl text-cyan-400 glow-text" style="background-image: linear-gradient(to right, cyan, violet);
                     color: transparent;
                     -webkit-background-clip: text;
-                    background-clip: text;">Shortly</p>
+                    background-clip: text;">Future</p>
                             </div>
                         </div>
                     </div>
