--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                                 individuals have come together to create the new golden standard of what a community
                                 should have to offer.
                                
-                                5% of our marketing budget to the POUTINE campaign.</span>
+                               
                         </p>
                     </div>
                 </div>
@@ -459,7 +459,7 @@
                                 <p  class="text-center text-4xl lg:text-7xl text-cyan-400 glow-text" style="background-image: linear-gradient(to right, cyan, violet);
                     color: transparent;
                     -webkit-background-clip: text;
-                    background-clip: text;">Future</p>
+                    background-clip: text;">in soon</p>
                             </div>
                         </div>
                     </div>
