--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                     <h1  class="text-center text-4xl lg:text-2xl text-cyan-400 glow-text" style="background-image: linear-gradient(to right, cyan, violet);
                     color: transparent;
                     -webkit-background-clip: text;
-                    background-clip: text;">CA</h1>
+                    background-clip: text;">Contract Sell</h1>
 
                     <div class="flex justify-center items-center w-full gap-x-3">
 
@@ -458,7 +458,7 @@
                                 <p  class="text-center text-4xl lg:text-7xl text-cyan-400 glow-text" style="background-image: linear-gradient(to right, cyan, violet);
                     color: transparent;
                     -webkit-background-clip: text;
-                    background-clip: text;">in soon</p>
+                    background-clip: text;">Future</p>
                             </div>
                         </div>
                     </div>
