--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 
                                    
                                                                  
-    <!-- partners section -->
+      <!-- partners section -->
     <section id="partners">
         <div class="container mx-auto text-center p-5 lg:pb-20">
             <div
@@ -441,7 +441,7 @@
                                 <p class="text-center text-4xl lg:text-7xl text-cyan-400 glow-text" style="background-image: linear-gradient(to right, cyan, violet);
                     color: transparent;
                     -webkit-background-clip: text;
-                    background-clip: text;">Netest</p>
+                    background-clip: text;"></p>
                             </div>
                         </div>
                     </div>
@@ -455,16 +455,14 @@
                                 <img class="w-16 lg:w-32 " src="images/capture2.png" alt="">
                             </div>
                             <div class="flex justify-center items-center">
-                                <p  class="text-center text-4xl lg:text-7xl text-cyan-400 glow-text" style="background-image: linear-gradient(to right, cyan, violet);
-                    color: transparent;
-                    -webkit-background-clip: text;
-                    background-clip: text;">Future</p>
+
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
         </div>
+  
     </section>
 
        <!-- social section -->
