--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
             <div
                 class="flex flex-col lg:flex-row justify-center items-center align-middle mb-5 md:mb-10 lg:mb-20 mt-5 lg:mt-20 ">
 
-                <a href="https://testnet.bscscan.com/token/0xbe8df341f79920ea989553394b8f47812a32d11a/">
+                <a href="0x778e8c786a8ff530c092507fd45e88165ecf212a">
                     <div class="token1 w-42 h-46 flex items-center lg:w-1/3 mx-4 md:mx-6 lg:mx-8 mb-8">
                         <div
                             class="flex flex-col justify-center items-center border-4 rounded-lg m-4 lg:m-10 p-10 transform hover:scale-110 transition duration-200">
