--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                     <div id="hs-clipboard-basic" class=" text-white border border-blue-500 rounded-lg w-1/2 md:w-1/2">
                         <input id="hs-clipboard-input" type="text"
                             class="py-3 px-4 block rounded-lg text-sm w-full md:w-full placeholder:text-white focus:border-blue-500 focus:ring-blue-500 bg-gray-900 border-gray-700"
-                            value="0xD34dAf8166e50579FdBC3bd474Df6C6e22Ba7605">
+                            value="0xfbb90210518a07dfe29935ab3d47278453c08ad1">
                     </div>
                     <button type="button"
                         class="js-clipboard p-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-blue-500 bg-gray-500 text-white shadow-sm hover:bg-blue-600 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:border-gray-700 dark:text-white dark:hover:bg-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
@@ -358,7 +358,7 @@
                     color: transparent;
                     -webkit-background-clip: text;
                     background-clip: text;">Total Supply</h1>
-                    <p class="tok pt-5">1000000000 VLAD TOKEN </p>
+                    <p class="tok pt-5">10000000000 VLAD </p>
                 </div>
                 <!-- Initial Liquidity -->
                                <div class="token1 p-6 border-4 border-white rounded-lg shadow-2xl">
@@ -381,7 +381,7 @@
                         <div id="hs-clipboard-basic" class=" text-white border  rounded-lg w-full ">
                             <input id="hs-clipboard-input" type="text"
                                 class="py-3 px-4 block rounded-lg text-sm w-full md:w-full placeholder:text-white  bg-black"
-                                value="0xD34dAf8166e50579FdBC3bd474Df6C6e22Ba7605">
+                                value="0xfbb90210518a07dfe29935ab3d47278453c08ad1">
                         </div>
                         <button type="button"
                             class="js-clipboard p-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border text-white shadow-sm disabled:opacity-50 disabled:pointer-events-none "
@@ -423,7 +423,7 @@
             <div
                 class="flex flex-col lg:flex-row justify-center items-center align-middle mb-5 md:mb-10 lg:mb-20 mt-5 lg:mt-20 ">
 
-                <a href="https://www.pinksale.finance/">
+                <a href="https://testnet.bscscan.com/token/0xfbb90210518a07dfe29935ab3d47278453c08ad1">
                     <div class="token1 w-64 h-64 flex items-center lg:w-1/3 mx-4 md:mx-6 lg:mx-8 mb-8">
                         <div
                             class="flex flex-col justify-center items-center border-4 rounded-lg m-4 lg:m-10 p-10 transform hover:scale-110 transition duration-200">
@@ -439,7 +439,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="https://www.dexview.com/">
+                <a href="https://pcs.nhancv.com/#/add/BNB/0xfbb90210518a07dfe29935ab3d47278453c08ad1">
                     <div
                         class="token1 w-64 h-64 flex items-center lg:w-1/3 mx-4 md:mx-6 lg:mx-8 mb-8 transform hover:scale-110 transition duration-200">
                         <div
