--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                     <h1  class="text-center text-4xl lg:text-2xl text-cyan-400 glow-text" style="background-image: linear-gradient(to right, cyan, violet);
                     color: transparent;
                     -webkit-background-clip: text;
-                    background-clip: text;">TOTOL SUPPLYy</h1>
+                    background-clip: text;">Total supply</h1>
                     <p class="tok pt-5">10000000000 VLAD </p>
                 </div>
                 <!-- Initial Liquidity -->
@@ -365,7 +365,7 @@
                     <h1  class="text-center text-4xl lg:text-2xl text-cyan-400 glow-text" style="background-image: linear-gradient(to right, cyan, violet);
                     color: transparent;
                     -webkit-background-clip: text;
-                    background-clip: text;">BURN</h1>
+                    background-clip: text;">Burn</h1>
                     <p class="tok   pt-5">100 VLAD ALL DAYS</p>
                 </div>
                 <!-- addd -->
@@ -374,7 +374,7 @@
                     <h1  class="text-center text-4xl lg:text-2xl text-cyan-400 glow-text" style="background-image: linear-gradient(to right, cyan, violet);
                     color: transparent;
                     -webkit-background-clip: text;
-                    background-clip: text;">CONTRACT </h1>
+                    background-clip: text;">Contract </h1>
 
                     <div class="flex justify-center items-center w-full gap-x-3">
 
