--- a/index.html
+++ b/index.html
@@ -475,15 +475,15 @@
                     Vlad Token</h1>
                
                 <div class="flex items-center justify-center md:justify-start gap-4 ">
-                    <a href="https://twitter.com/Vladtokens">
+                    <a href="https://t.me/VladToken">
                         <img class="w-24 transform hover:scale-110 transition duration-200" src="images/social_tg.png"
                             alt="">
                     </a>
-                    <a href="https://twitter.com/Vladtokens">
+                    <a href="https://twitter.com/PoutineToken">
                         <img class="w-24 transform hover:scale-110 transition duration-200" src="images/social_x.png"
                             alt="">
                     </a>
-                     <a href="https://twitter.com/Vladtokens">
+                     <a href="https://www.instagram.com/vladtoken/">
                         <img class="w-24 transform hover:scale-110 transition duration-200"
                             src="images/instagram.png" alt="">
                     </a>
