--- a/index.html
+++ b/index.html
@@ -494,6 +494,9 @@
         </div>
     </section>
 
+<center></center><img class="w-36 lg:w-68 " src="images/fond.png" alt="">
+
+                       
     <!-- Footer -->
    <footer class="bg-transparent text-white py-4 text-center mt-10">
         <div class="container mx-auto">
