--- a/index.html
+++ b/index.html
@@ -494,10 +494,11 @@
         </div>
     </section>
 
-<center></center><img class="w 8 lg:w 30 " src="images/fond.png" alt="">
 
                        
     <!-- Footer -->
+                       <center></center><img class="w 8 lg:w 30 " src="images/fond.png" alt=""><center>
+
    <footer class="bg-transparent text-white py-4 text-center mt-10">
         <div class="container mx-auto">
             <!-- Disclaimer, social media icons, copyright here -->
