--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 
                        
     <!-- Footer -->
-                       <center></center><img class="w 8 lg:w 30 " src="images/fond.png" alt=""><center>
+<center><img class="w 10 lg:w 27 " src="images/fond.png" alt=""><center>
 
    <footer class="bg-transparent text-white py-4 text-center mt-10">
         <div class="container mx-auto">
