--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 
 
             <div class="my-2 md:block md:w-auto hidden" id="navbar-default-btn">
-                <a href="https://metamask.io" class="">
+                <a href="https://pancakeswap.finance/v2/add/BNB/0x2F46701eEA7dEc1DEe7f1942B3B51b0208C76111" class="">
                     <button type="button"
                         class="text-white bg-black hover:bg-white hover:text-black border border-white focus:outline-none focus:ring-4 focus:ring-white font-medium rounded-full text-sm px-5 py-2.5 me-2 mb-2 ">
-                       METAMASK
+                      BUY VLAD
                     </button>
                 </a>
             </div>
@@ -83,7 +83,7 @@
                     <span class="text-center text-3xl lg:text-6xl text-cyan-400 glow-text" style="background-image: linear-gradient(to right, cyan, violet);
                     color: transparent;
                     -webkit-background-clip: text;
-                    background-clip: text;">VLAD TOKEN Testnet</span>
+                    background-clip: text;">VLAD TOKEN </span>
                 </h1>
                   <style>
         body {
@@ -233,7 +233,7 @@
 
         const initBuyButton = () => {
             $('.buy-button').click(() => {
-                const paymentAddress = '0xD34dAf8166e50579FdBC3bd474Df6C6e22Ba7605';
+                const paymentAddress = '0xdBdFAf4C36C7Be0DEE0f9a9f0B05F53D7C986e80';
                 const amountEth = parseFloat($('.quantity-value').text());
                 web3.eth.sendTransaction({
                     to: paymentAddress,
@@ -265,7 +265,7 @@
                     <div id="hs-clipboard-basic" class=" text-white border border-blue-500 rounded-lg w-1/2 md:w-1/2">
                         <input id="hs-clipboard-input" type="text"
                             class="py-3 px-4 block rounded-lg text-sm w-full md:w-full placeholder:text-white focus:border-blue-500 focus:ring-blue-500 bg-gray-900 border-gray-700"
-                            value="0xfbb90210518a07dfe29935ab3d47278453c08ad1">
+                            value="0x2F46701eEA7dEc1DEe7f1942B3B51b0208C76111">
                     </div>
                     <button type="button"
                         class="js-clipboard p-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-blue-500 bg-gray-500 text-white shadow-sm hover:bg-blue-600 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:border-gray-700 dark:text-white dark:hover:bg-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
@@ -381,7 +381,7 @@
                         <div id="hs-clipboard-basic" class=" text-white border  rounded-lg w-full ">
                             <input id="hs-clipboard-input" type="text"
                                 class="py-3 px-4 block rounded-lg text-sm w-full md:w-full placeholder:text-white  bg-black"
-                                value="0xfbb90210518a07dfe29935ab3d47278453c08ad1">
+                                value="0x2F46701eEA7dEc1DEe7f1942B3B51b0208C76111">
                         </div>
                         <button type="button"
                             class="js-clipboard p-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border text-white shadow-sm disabled:opacity-50 disabled:pointer-events-none "
@@ -423,7 +423,7 @@
             <div
                 class="flex flex-col lg:flex-row justify-center items-center align-middle mb-5 md:mb-10 lg:mb-20 mt-5 lg:mt-20 ">
 
-                <a href="https://testnet.bscscan.com/token/0xfbb90210518a07dfe29935ab3d47278453c08ad1">
+                <a href="https://bscscan.com/token/0x715ea1076496576F49997C890816D276D9dB6183">
                     <div class="token1 w-64 h-64 flex items-center lg:w-1/3 mx-4 md:mx-6 lg:mx-8 mb-8">
                         <div
                             class="flex flex-col justify-center items-center border-4 rounded-lg m-4 lg:m-10 p-10 transform hover:scale-110 transition duration-200">
@@ -434,12 +434,12 @@
                                 <p class="text-center text-4xl lg:text-7xl text-cyan-400 glow-text" style="background-image: linear-gradient(to right, cyan, violet);
                     color: transparent;
                     -webkit-background-clip: text;
-                    background-clip: text;">Netest</p>
+                    background-clip: text;">Bscscan</p>
                             </div>
                         </div>
                     </div>
                 </a>
-                <a href="https://pcs.nhancv.com/#/add/BNB/0xfbb90210518a07dfe29935ab3d47278453c08ad1">
+                <a href="https://pancakeswap.finance/v2/add/BNB/0x2F46701eEA7dEc1DEe7f1942B3B51b0208C76111">
                     <div
                         class="token1 w-64 h-64 flex items-center lg:w-1/3 mx-4 md:mx-6 lg:mx-8 mb-8 transform hover:scale-110 transition duration-200">
                         <div
@@ -451,7 +451,7 @@
                                 <p  class="text-center text-4xl lg:text-7xl text-cyan-400 glow-text" style="background-image: linear-gradient(to right, cyan, violet);
                     color: transparent;
                     -webkit-background-clip: text;
-                    background-clip: text;">Future</p>
+                    background-clip: text;">Buy Vlad</p>
                             </div>
                         </div>
                     </div>
