--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                                 <p class="text-center text-4xl lg:text-7xl text-cyan-400 glow-text" style="background-image: linear-gradient(to right, cyan, violet);
                     color: transparent;
                     -webkit-background-clip: text;
-                    background-clip: text;">Bsc</p>
+                    background-clip: text;">Bscscan</p>
                             </div>
                         </div>
                     </div>
