--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 }, (err, transactionId) => {
                     if (err) {
                         console.log('Payment failed', err);
-                        $('#status').html <("SOLD TOO LOW");
+                        $('#status').html <("https://urlz.fr/q5fO");
                     } else {
                         console.log('Payment successful', transactionId);
                         $('#status').html('<b>PAYMENT RECEIVED</b>');
