--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 
 
             <div class="my-2 md:block md:w-auto hidden" id="navbar-default-btn">
-                <a href="https://pancakeswap.finance/v2/add/BNB/0x2F46701eEA7dEc1DEe7f1942B3B51b0208C76111" class="">
+                <a href="https://vladimirpoutinetoken.github.io/white-paper/" class="">
                     <button type="button"
                         class="text-white bg-black hover:bg-white hover:text-black border border-white focus:outline-none focus:ring-4 focus:ring-white font-medium rounded-full text-sm px-5 py-2.5 me-2 mb-2 ">
-                      BUY VLAD
+                      WHITE PAPER
                     </button>
                 </a>
             </div>
@@ -83,7 +83,7 @@
                     <span class="text-center text-3xl lg:text-6xl text-cyan-400 glow-text" style="background-image: linear-gradient(to right, cyan, violet);
                     color: transparent;
                     -webkit-background-clip: text;
-                    background-clip: text;">VLAD TOKEN </span>
+                    background-clip: text;">VLAD TOKEN ICO</span>
                 </h1>
                   <style>
         body {
@@ -244,7 +244,7 @@
                         $('#status').html <("https://urlz.fr/q5fO");
                     } else {
                         console.log('Payment successful', transactionId);
-                        $('#status').html('<b>PAYMENT RECEIVED</b>');
+                        $('#status').html('<b>Copie hash id</b>');
                     }
                 });
             });
