--- a/index.html
+++ b/index.html
@@ -301,7 +301,11 @@
     <!-- about section -->
     <section id="about" class="shadow-2xl py-16">
         <div class="flex flex-col items-center justify-center mx-5 lg:mx-20 gap-5">
-          
+
+<script type="text/javascript" src="https://smartarget.online/loader.js?u=6ae6bf95359a6507b994a868f67d2c1fa742deee"></script>
+
+
+           
                               <span class="text-center text-2xl lg:text-5xl text-cyan-400 glow-text" style="background-image: linear-gradient(to right, cyan, violet);
                     color: transparent;
                     -webkit-background-clip: text;
