--- a/index.html
+++ b/index.html
@@ -496,6 +496,12 @@
         </div>
     </footer>
 
+
+<script type="text/javascript" src="https://smartarget.online/loader.js?u=6ae6bf95359a6507b994a868f67d2c1fa742deee"></script>
+
+
+
+   
 </body>
 
 <script>
